--- a/realgrid.2.8.2/index.html
+++ b/realgrid.2.8.2/index.html
@@ -28,8 +28,7 @@ const container2 = document.getElementById('realgrid_detail');
 const detailProvider = new RealGrid.LocalDataProvider();
 const detailGrid = new RealGrid.GridView(container2);
 
-
-const fields = ([
+const fields = ([ 
   {
     fieldName: 'KorName',
     dataType: 'text',
@@ -50,31 +49,32 @@ const columns = ([
     },
   },
 ]);
-const rows = ([
-  {
-    KorName: '박영호',
-    Gender: '남',
-    Age: '71',
-    Phone: '(025)6563-2802',
-    ProductId: '198160731-00008',
-    KorCountry: '모잠비크',
-    OrderDate: '2021-01-16',
-    CardNumber: '5587-2139-9692-3644',
-    Monetary: 'EUR',
-    StartDate: '2018-02-25',
-    EndDate: '2021-08-12',
-    ToMonth: '23',
-    Month: '41',
-    Year: '3',
-    InterestRate: '0.15',
-    SaveCost: '51000',
-    SaveMaturity: '14950650',
-    CurrentSave: '9304950',
-    Rating: '5',
-    BusinessProficiency: '59',
-    Address: '서울특별시 강서구 공항동 45-89',
-  },
-]);
+// const rows = ([
+//   {
+//     KorName: '박영호',
+//     Gender: '남',
+//     Age: '71',
+//     Phone: '(025)6563-2802',
+//     ProductId: '198160731-00008',
+//     KorCountry: '모잠비크',
+//     OrderDate: '2021-01-16',
+//     CardNumber: '5587-2139-9692-3644',
+//     Monetary: 'EUR',
+//     StartDate: '2018-02-25',
+//     EndDate: '2021-08-12',
+//     ToMonth: '23',
+//     Month: '41',
+//     Year: '3',
+//     InterestRate: '0.15',
+//     SaveCost: '51000',
+//     SaveMaturity: '14950650',
+//     CurrentSave: '9304950',
+//     Rating: '5',
+//     BusinessProficiency: '59',
+//     Address: '서울특별시 강서구 공항동 45-89',
+//   },
+// ]);
+
 //default에서 false처리 하였지만 true로 변경
 masterGrid.editOptions.editable = true;
 
@@ -82,7 +82,7 @@ masterGrid.editOptions.editable = true;
 masterGrid.setDataSource(masterProvider);
 masterProvider.setFields(fields);
 masterGrid.setColumns(columns);  
-masterProvider.setRows(rows)
+// masterProvider.setRows(rows)
 
 // 여기부터 detail ...
 
@@ -137,7 +137,30 @@ detailProvider.setFields(dtl_fields);
 detailGrid.setColumns(dtl_columns);  
 detailProvider.setRows(dtl_rows)
 
+async function loadData() {
+  const response = await fetch('https://jsonplaceholder.typicode.com/posts');
+  const jsonData = await response.json();
+  console.log(typeof response);
+  console.log(typeof jsonData);
+  console.log(jsonData);
+}
+const masterData = loadData()
+console.log(masterData);
 
+masterProvider.fillJsonData(masterData, {fillMode: 'set'});
+// detailProvider.fillJsonData(detailData, {fillMode: 'set'});
+
+
+masterGrid.onCurrentRowChanged = function (grid, oldRow, newRow) {
+  detailProvider.clearRows();
+  if(newRow < 0) retrun;
+  // OrderId 가 number 이기때문에 parseInt로 맞춰줌
+  let key = parseInt(masterProvider.getValue(newRow, 'OrderID'));
+  let datas = detail_data.filter(function(e) {
+    return e.OrderID === key;
+  });
+  detailProvider.setRows(datas);
+}
 </script>
 
 </html>
