--- a/javascript/index.html
+++ b/javascript/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <script src="./json.js" defer></script> -->
-    <script src="./main.js" defer></script>
+    <!-- <script src="./main.js" defer></script> -->
+    <script src="./operator.js" defer></script>
   </head>
   <body></body>
 </html>
