--- a/javascript/index.html
+++ b/javascript/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <!-- <script src="./json.js" defer></script> -->
     <!-- <script src="./main.js" defer></script> -->
-    <script src="./operator.js" defer></script>
+    <script src="./function.js" defer></script>
   </head>
   <body></body>
 </html>
